--- a/results/03_da_results.Rmd
+++ b/results/03_da_results.Rmd
@@ -1,10 +1,10 @@
-## Volcano plot
+### Volcano plot
 
 ```{r}
 plot_volcano(feats, gs_methplusplus, gse)
 ```
 
-## GSEA
+### GSEA
 
 ```{r}
 et_gsea_plot = function(den_vec_name, n_top, enrichement, i) {
