--- a/results/04_results.Rmd
+++ b/results/04_results.Rmd
@@ -11,7 +11,7 @@ output:
     number_sections: true
 ---
 
-# Step 4: Results
+# Step 4 : Results
 
 ```{r, echo=FALSE, eval=TRUE}
 knitr::opts_chunk$set(collapse=TRUE, comment = "#>", fig.width=9, fig.height=6, eval=TRUE, echo=FALSE, results="hide", warning=FALSE)
@@ -244,7 +244,7 @@ for (gene_symbol in gene_symbols[1:min(6, length(gene_symbols))]) {
 
 
 
-## Multi omic analysis in in TCGA
+## Multi omic analysis in TCGA
 
 ```{r momik, eval=TRUE}
 tcga_project = "TCGA-LUSC"
