--- a/results/04_results.Rmd
+++ b/results/04_results.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(collapse=TRUE, comment = "#>", fig.width=9, fig.height=6, 
 
 
 ```{r}
-feat_export_filename = paste0("feats.xlsx")
+feat_export_filename = paste0("feats_", prefix3, ".xlsx")
 ```
 
 Annotated features are exported as [`r feat_export_filename`](`r feat_export_filename`) file. 
@@ -253,11 +253,27 @@ s_cnv   = mreadstudyRDS(paste0("tcga_studies/study_", tcga_project, "_cnv.rds"))
 s_meth  = mreadstudyRDS(paste0("tcga_studies/study_", tcga_project, "_meth.rds"))
 s_trscr = mreadstudyRDS(paste0("tcga_studies/study_", tcga_project, "_trscr.rds"))
 
+
+
+pvals =c()
+
 for (gene_symbol in gene_symbols[1:min(6, length(gene_symbols))]) {
   print(gene_symbol)
-  # mdata = get_multiomic_data(gene_symbols=gene_symbol, tcga_project=tcga_project)  
+  mdata = get_multiomic_data(gene_symbols=gene_symbol, tcga_project=tcga_project)  
+  mdata$d 
+  head(mdata$d)
+  Y=mdata$d[,gene_symbol]
+  X=apply(mdata$d[,mdata$probes],1,mean)
+  m= lm(X~Y)
+  sm=summary(m)
+  fstat=sm$fstatistic
+  pval = pf(fstat[[1]], fstat[[2]], fstat[[3]], lower.tail = FALSE)
+  pvals = c(pvals, pval)
+  
   try(momic_pattern(gene_symbol, tcga_project))
 }
+layout(1, respect=TRUE)
+plot(density(-log10(pvals)))
 #pval multiomic linkage score
 ```
 
