--- a/results/03_da_GSE5816.Rmd
+++ b/results/03_da_GSE5816.Rmd
@@ -10,13 +10,13 @@ output:
     number_sections: true
 ---
 
-# Step 3.2 : Expression of genes in GSE5816 (5-aza treated)
-
 ```{r, echo=FALSE, eval=TRUE}
 knitr::opts_chunk$set(collapse=TRUE, comment = "#>", fig.width=9, fig.height=6, eval=TRUE, echo=FALSE, results="hide", warning=FALSE)
 ```
 
-## Study
+## GSE5816
+
+### Dataset
 
 ```{r}
 s = readRDS("~/projects/study_gpl570/study_GSE5816_trscr_gs.rds")
@@ -154,10 +154,11 @@ abline(h=-log10(0.05), v=c(-1,1), lty=2,col=2)
 #plot(-log10(stats$pval), -log10(stats2$pval))
 ```
 
-## Results
+## Figure
 
 ```{r}
 gse = "GSE5816"
+model = "5-aza 1000 nM vs. DMSO (ref.)"
 feats[,paste0("l2fc_", gse)] = NA
 feats[,paste0("pval_", gse)] = NA
 feats[,paste0("l2fc_", gse)] = stats2[rownames(feats),]$beta
