--- a/results/00_pipeline.Rmd
+++ b/results/00_pipeline.Rmd
@@ -130,7 +130,7 @@ if (!exists("gene_indexed_probes")) {
     pf_bed[,6] = "+"
     pf_bed = pf_bed[!pf_bed[,1]%in%"*",]
     head(pf_bed)
-    options(scipen=999)
+    # options(scipen=999)
     write.table(pf_bed, file="illumina_450k_hg38.bed", sep="\t", quote=FALSE,row.names=FALSE, col.names=FALSE)    
   }  
   ## index meth probes by chr
