--- a/results/04_results.Rmd
+++ b/results/04_results.Rmd
@@ -15,9 +15,9 @@ output:
 
 ```{r, echo=FALSE, eval=TRUE}
 knitr::opts_chunk$set(collapse=TRUE, comment = "#>", fig.width=9, fig.height=6, eval=TRUE, echo=FALSE, results="hide", warning=FALSE)
-
 ```
-## Big Picture
+
+## Figure
 
 ```{r}
 if (! exists("momik_pvals")) {
@@ -25,7 +25,7 @@ if (! exists("momik_pvals")) {
   genes = genes_singleton$genes
 
   s_meth = mreadRDS("~/projects/all_human_tissues/results/meth/study_meth_all_human_tissues_grch38.rds")
-  feat_indexed_probes = mget_feat_indexed_probes(feats_bed6=genes, s_meth$platform[,c("Chromosome", "Start")], up_str=max(ud_strs), dwn_str=max(ud_strs))
+  feat_indexed_probes = mget_feat_indexed_probes(feats_bed6=genes, s_meth$platform[,c("Chromosome", "Start")], up_str=ud_str, dwn_str=2500)
   tmp_gs = intersect(names(feat_indexed_probes), rownames(genes))
   momik_pvals = epimedtools::monitored_apply(mod=10, t(t(tmp_gs)), 1, function(gene_symbol) {
     #print(gene_symbol)
@@ -63,10 +63,12 @@ feats[names(momik_pvals),]$momik_pvals = momik_pvals
 
 
 if (! exists("survival_pvalhrs")) {
+  s = mreadRDS(paste0("tcga_studies/study_", tcga_project, "_trscr.rds"))
+  s = truncate_survival(s, 60)  
+
   genes_singleton = mget_genes(tcga_project)
   genes = genes_singleton$genes
 
-  s = mreadRDS(paste0("tcga_studies/study_", tcga_project, "_trscr.rds"))
   tmp_gs = intersect(rownames(feats), rownames(s$data))
   survival_pvalhrs = epimedtools::monitored_apply(mod=10, t(t(tmp_gs)), 1, function(gene_symbol) {
     idx_sample = rownames(s$exp_grp)[!is.na(s$exp_grp$os)]
@@ -97,30 +99,47 @@ feats[rownames(survival_pvalhrs),]$survival_hrs = survival_pvalhrs[,2]
 
 # plot(-log10(feats$survival_pvals), -log10(feats$momik_pvals), pch=ifelse(feats$cpg_status %in% "rich", "black", "grey"), col=adjustcolor(1, alpha.f=.3), pch=".")
 
-layout(1, respect=TRUE)
-plot(-log10(feats$momik_pvals), -log10(feats$survival_pvals), col=adjustcolor(1, alpha.f=.3), xlab="multi-omic score")
-abline(h=-log10(0.05), lty=2)
-
-# idx = rownames(feats)[feats$cpg_status %in% "rich"]
-# points(-log10(feats[idx,]$survival_pvals), -log10(feats[idx,]$momik_pvals), col="red")
-
-idx = rownames(feats)[feats[[gs_name]]]
-points(-log10(feats[idx,]$momik_pvals), -log10(feats[idx,]$survival_pvals), col="red")
-
-
-
 ntop=100
-
+idx = rownames(feats)[feats[[gs_name]]]
 idx2 = idx[order(feats[idx,]$l2fc_GSE45332, decreasing=TRUE)][1:ntop]
-# feats[idx2,]$l2fc_GSE45332
-points(-log10(feats[idx2,]$momik_pvals), -log10(feats[idx2,]$survival_pvals), col=adjustcolor("blue", alpha.f=.8), pch=16)
-
 idx3 = idx[order(feats[idx,]$l2fc_GSE5816, decreasing=TRUE)][1:ntop]
-# feats[idx2,]$l2fc_GSE45332
+gene_symbols = intersect(intersect(idx[feats[idx,]$survival_pvals < 0.05], idx[-log10(feats[idx,]$momik_pvals)>5]), union(idx2, idx3)) 
+gene_symbols = gene_symbols[order(feats[gene_symbols,]$momik_pvals)][1:min(20, length(gene_symbols))]
+
+
+layout(1, respect=TRUE)
+plot(-log10(feats$momik_pvals), -log10(feats$survival_pvals), col=adjustcolor(1, alpha.f=.3), xlab="multi-omic score", ylab="-log10(pval_logrank)", xlim=c(0,1.5*max(-log10(feats[gene_symbols,]$momik_pvals))), ylim=c(0,1.5*max(-log10(feats[gene_symbols,]$survival_pvals))))
+abline(h=-log10(0.05), lty=2)
+points(-log10(feats[idx,]$momik_pvals), -log10(feats[idx,]$survival_pvals), col="red")
+points(-log10(feats[idx2,]$momik_pvals), -log10(feats[idx2,]$survival_pvals), col=adjustcolor("blue", alpha.f=.8), pch=16)
 points(-log10(feats[idx3,]$momik_pvals), -log10(feats[idx3,]$survival_pvals), col=adjustcolor("green", alpha.f=.8), pch=16)
 
-idx4 = interest(idx[feats[idx,]$survival_pvals < 0.05]) 
+text(-log10(feats[gene_symbols,]$momik_pvals), -log10(feats[gene_symbols,]$survival_pvals), gene_symbols, pos=3, col="white")
+text(-log10(feats[gene_symbols,]$momik_pvals), -log10(feats[gene_symbols,]$survival_pvals), gene_symbols, pos=3, col=adjustcolor(1, alpha.f=0.8))
 ```
+
+
+
+
+
+```{r survival, eval=TRUE}
+tcga_project = "TCGA-LUSC"
+s = mreadRDS(paste0("tcga_studies/study_", tcga_project, "_trscr.rds"))
+s = truncate_survival(s, 60)
+
+
+for (gene_symbol in gene_symbols) {
+  idx_sample = rownames(s$exp_grp)[!is.na(s$exp_grp$os)]
+  ss = s$exp_grp[idx_sample,]$os
+  v = s$data[gene_symbol, idx_sample]
+  try(epimedtools::plot_survival_panel_simple2(ss=ss, v=v, main=gene_symbol))
+  try(momic_pattern(gene_symbol, tcga_project))
+}
+```
+
+
+
+
 
 
 ## Export features
@@ -141,9 +160,9 @@ WriteXLS::WriteXLS(feats, feat_export_filename)
 ```
 
 
-## Core feats
 
-```{r core feats}
+```{r core feats, eval=FALSE}
+## Core feats
 # plot 2 firsts studies
 #threshold
 #study 1
@@ -174,239 +193,20 @@ if (length(corefeats!=0)){
 
 ```
 
+
+```{r results="verbatim", eval=FALSE}
 Annotated core features are exported as [`r corefeat_export_filename`](`r corefeat_export_filename`) file. 
-
-```{r results="verbatim"}
 head(corefeats)
-```
-
-```{r export core fetas}
 tmp_d = feats[corefeats,]
 WriteXLS::WriteXLS(tmp_d, corefeat_export_filename)
 ```
 
 
+
+
+```{r gtex, fig.height=9, eval=FALSE}
 ## Expression in GTEx
-
-
-```{r gtex, fig.height=9}
-study_gtex_filename = "~/projects/gtex/results/study_gtex.rds"
-s = mreadRDS(study_gtex_filename)  
-if (length(corefeats!=0)){
-tmp_idx_features = intersect(corefeats, rownames(s$data))
-
-# ```{r label="sort data by sample"}
-tissues = rev(names(sort(table(s$exp_grp$tissue_group_level1))))
-s$exp_grp = s$exp_grp[s$exp_grp$tissue_group_level1 %in% tissues,]
-s$exp_grp$tissue_group_level1 = factor(s$exp_grp$tissue_group_level1, levels=tissues)
-idx_samples = rownames(s$exp_grp)[order(s$exp_grp$tissue_group_level1)]
-s$data = s$data[,idx_samples]
-s$exp_grp = s$exp_grp[idx_samples,]
-# ```
-# ```{r label="normalization"}
-data = normalization(s$data[tmp_idx_features,], "zscore_rows")
-# ```
-# ```{r label="clustering each tissue group"}
-outputs = lapply(tissues, function (tissue) {
-  # tissue = "prostate"
-  print(tissue)
-  idx_sample = rownames(s$exp_grp)[s$exp_grp$tissue_group_level1 == tissue]
-  d = data[,idx_sample]
-  sum(is.na(d))
-  foo = plot_expr_hm(
-    data=d                           ,
-    rsc=NULL                         , 
-    csc=NULL                         , 
-    nb_grp_row=4                     ,
-    nb_grp_col=4                     , 
-    main=tissue                      , 
-    hcmeth_cols="eucl_dist"          , 
-    hcmeth_rows="eucl_dist"          , 
-    normalization=FALSE              , 
-    ordering_func=median             , 
-    colors=c("cyan", "black", "red") , 
-    PCA=FALSE                        ,
-    PLOT_MAIN_HM=FALSE
-  )
-  dendro = as.dendrogram(foo$hc_col)  
-  sample = foo$hc_col$labels[foo$hc_col$order][ceiling(length(foo$hc_col$order)/2)]
-  tissue = tissue
-  list(dendro=dendro, sample=sample, tissue=tissue)
-})
-dendro_cols = do.call(merge, lapply(outputs, "[[", "dendro"))
-labels = sapply(outputs, "[[", "tissue")
-names(labels) = sapply(outputs, "[[", "sample")
-# ```
-# ```{r}
-# data = s$data[tmp_idx_features,]
-
-colors = c("cyan", "black", "red")
-cols = colorRampPalette(colors)(20)
-main=""
-
-tmp_tab = table(s$exp_grp$tissue_group_level1)
-ColSideColors = unlist(apply(cbind(data.frame(tmp_tab), col=rep(c("white", "grey"), length(tmp_tab))[1:length(tmp_tab)]), 1, function (l) {
-  rep(l[[3]], as.numeric(l[[2]]))
-}))
-
-# colnames by tissues
-tmp_data = data
-tmp_cn = colnames(tmp_data)
-names(tmp_cn) = tmp_cn
-tmp_cn[] = NA
-tmp_cn
-tmp_cn[names(labels)] = labels
-colnames(tmp_data) = tmp_cn
-# colnames(tmp_data)
-
-
-tmp_data[tmp_data < -4 ] = -4
-tmp_data[tmp_data > 4 ] = 4
-foo = plot_expr_hm(
-  data=tmp_data                    ,
-  rsc=NULL                         , 
-  csc=ColSideColors                , 
-  Colv=dendro_cols                  , 
-  main=""                          , 
-  hcmeth_cols=FALSE                , 
-  hcmeth_rows="cor"                , 
-  normalization=FALSE              , 
-  ordering_func=median             , 
-  colors=c("cyan", "black", "red") , 
-  PCA=FALSE                        ,
-  PLOT_MAIN_HM=TRUE                ,
-  cexRow=0.6                       , 
-  cexCol=0.6
-)
-
-# ```
-#
-# ```{r}
-
-Rowv = as.dendrogram(foo$hc_row)
-
-tmp_data = t(apply(data, 1, function(l) {
-  # l = data [1,]
-  # bp = boxplot(l~s$exp_grp[colnames(data),]$tissue_group_level1, las=2)
-  m = lm(l~s$exp_grp[colnames(data),]$tissue_group_level1)
-  tmp_coef =  m$coefficients
-
-  oo = tmp_coef[1]
-  tmp_coef = tmp_coef  + tmp_coef[1]
-  tmp_coef[1] =  oo 
-  names(tmp_coef) = c(levels(s$exp_grp$tissue_group_level1)[1], do.call(rbind, strsplit(names(tmp_coef)[-1], "tissue_group_level1"))[,2])
-  # points(tmp_coef, col=2)
-  tmp_coef
-}))
-
-RowSideColors = rep("white", nrow(data))
-
-tmp_data[tmp_data < -4 ] = -4
-tmp_data[tmp_data > 4 ] = 4
-foo = plot_expr_hm(
-  data=tmp_data                    ,
-  rsc=RowSideColors                , 
-  csc=NULL                         , 
-  Rowv=Rowv                        ,
-  # Colv=dendro_cols                  ,
-  main=""                          , 
-  hcmeth_cols=FALSE                , 
-  hcmeth_rows="cor"                , 
-  normalization=FALSE              , 
-  ordering_func=median             , 
-  colors=c("cyan", "black", "red") , 
-  PCA=FALSE                        ,
-  PLOT_MAIN_HM=TRUE                ,
-  cexRow=0.6                       , 
-  cexCol=0.6
-)
-}
-```
-
-## Survival
-
-```{r survival, eval=TRUE}
-tcga_project = "TCGA-LUSC"
-s = mreadRDS(paste0("tcga_studies/study_", tcga_project, "_trscr.rds"))
-gene_symbols =  intersect(corefeats, rownames(s$data))
-
-pv_logrank = sapply(gene_symbols, function(gene_symbol) {  
-  idx_sample = rownames(s$exp_grp)[!is.na(s$exp_grp$os)]
-  ss = s$exp_grp[idx_sample,]$os
-  v = s$data[gene_symbol, idx_sample]
-  epimedtools::coxres(ss=ss, v=v)[[1]]
-})
-gene_symbols = gene_symbols[order(pv_logrank)]
-
-for (gene_symbol in gene_symbols[1:min(6, length(gene_symbols))]) {
-  idx_sample = rownames(s$exp_grp)[!is.na(s$exp_grp$os)]
-  ss = s$exp_grp[idx_sample,]$os
-  v = s$data[gene_symbol, idx_sample]
-  try(epimedtools::plot_survival_panel_simple2(ss=ss, v=v, main=gene_symbol))
-}  
-
-```
-
-
-
-
-## Multi omic analysis in TCGA
-
-```{r momik, eval=TRUE}
-tcga_project = "TCGA-LUSC"
-
-s_cnv   = mreadstudyRDS(paste0("tcga_studies/study_", tcga_project, "_cnv.rds"))
-s_meth  = mreadstudyRDS(paste0("tcga_studies/study_", tcga_project, "_meth.rds"))
-s_trscr = mreadstudyRDS(paste0("tcga_studies/study_", tcga_project, "_trscr.rds"))
-
-
-
-# pvals =c()
-# 
-# for (gene_symbol in gene_symbols[1:min(6, length(gene_symbols))]) {
-#   print(gene_symbol)
-#   mdata = get_multiomic_data(gene_symbols=gene_symbol, tcga_project=tcga_project)  
-#   mdata$d 
-#   head(mdata$d)
-#   Y=mdata$d[,gene_symbol]
-#   X=apply(mdata$d[,mdata$probes],1,mean)
-#   m= lm(X~Y)
-#   sm=summary(m)
-#   fstat=sm$fstatistic
-#   pval = pf(fstat[[1]], fstat[[2]], fstat[[3]], lower.tail = FALSE)
-#   pvals = c(pvals, pval)
-#   
-#   try(momic_pattern(gene_symbol, tcga_project))
-# }
-# layout(1, respect=TRUE)
-# plot(density(-log10(pvals)))
-#pval multiomic linkage score
-
-
-pvals =c()
-
-for (gene_symbol in gene_symbols[1:length(gene_symbols)]) {
-  print(gene_symbol)
-  mdata = try(mget_multiomic_data(gene_symbols=gene_symbol, tcga_project=tcga_project)) 
-  if (class(mdata)!= "try-error"){
-    if (!is.null(mdata$d)) {
-      mdata$d 
-      head(mdata$d)
-      Y=mdata$d[,gene_symbol]
-      X=apply(mdata$d[,mdata$probes],1,mean)
-      m= lm(X~Y)
-      sm=summary(m)
-      fstat=sm$fstatistic
-      pval = pf(fstat[[1]], fstat[[2]], fstat[[3]], lower.tail = FALSE)
-      pvals = c(pvals, pval)
-    } else {
-      warning(paste0("probleme with ", gene_symbol))
-    }
-  }
-  #try(momic_pattern(gene_symbol, tcga_project))
-}
-layout(1, respect=TRUE)
-plot(density(-log10(pvals)))
+expression_in_gtex(gene_symbols)
 ```
 
 
